[package]
name = "wasm-locale"
version = "0.1.0"
authors = ["nciric@gmail.com"]
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
icu-locale = { git = "https://github.com/unicode-org/icu4x" }

[profile.release]
panic = "abort"
lto = true
opt-level = 'z'